# StarNaviSocial

./: .gitignore
auto_bot/: config.yml  main.py  pyproject.toml
auto_bot/src/: bot.py  http_client.py  service.py
auto_bot/src/utils/: __init__.py  data_generator.py  http_methods.py  logger.py  utils.py
star_navi_social/: .env  .flake8  README.md  alembic.ini  docker-compose.yml  dockerfile  dump.sql  main.py  pyproject.toml  test.http
star_navi_social/src/: config.py  env.py
star_navi_social/src/controllers/: __init__.py  activity_controller.py  analytics_controller.py  auth_controller.py  post_controller.py
star_navi_social/src/middlewares/: __init__.py  logger_middleware.py
star_navi_social/src/models/: __init__.py  databaseClient.py  post_interactions.py  post_model.py  user_activity.py  user_model.py
star_navi_social/src/models/migration/: env.py
star_navi_social/src/models/migration/versions/: 727348f0fcf4_initial.py
star_navi_social/src/routes/: __init__.py  activity.py  analytics.py  auth.py  post.py
star_navi_social/src/schemas/: __init__.py  analytics.py  common.py  post_schema.py  user_activity.py  user_schema.py
star_navi_social/src/utils/: __init__.py  auth.py  exception.py  logger.py  password_hasher.py  track_user_activity.py
star_navi_social/tests/api/: api_client.py  conftest.py  result.py
star_navi_social/tests/api/auth/: test_registration.py
